增加一个DQCNN项目
Former-commit-id: 6406f256a50ecf84e87c643a89ed6ed694041f76

--- a/机器学习笔记/14_CNN深度计算机视觉.ipynb
+++ b/机器学习笔记/14_CNN深度计算机视觉.ipynb
@@ -36,6 +36,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -368,6 +370,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -385,6 +388,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,6 +396,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -450,6 +455,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -529,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train[..., np.newaxis] # 增加一个维度,暂时不清楚为什么\n",
+    "X_train = X_train[..., np.newaxis] # 增加一个维度, 应该是模型要求\n",
     "X_valid = X_valid[..., np.newaxis]\n",
     "X_test = X_test[..., np.newaxis]"
    ]
@@ -551,7 +557,7 @@
     }
    ],
    "source": [
-    "X_train[0,1,5]"
+    "X_train[0, 1, 5]"
    ]
   },
   {
@@ -585,6 +591,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,7 +607,7 @@
     "model = keras.models.Sequential([\n",
     "    keras.layers.Conv2D(64, 7, \n",
     "                       activation='relu', \n",
-    "                       padding='same',\n",
+    "                       padding='same', \n",
     "                       input_shape=[28, 28, 1]), \n",
     "    # 👆 64个滤波器，核高宽7（卷积层），核越大保留信息越多 \n",
     "    keras.layers.MaxPool2D(2), # 池化层，大小2，在每个维度除以2(等于步幅)\n",
