--- a/机器学习笔记/18_强化学习.ipynb
+++ b/机器学习笔记/18_强化学习.ipynb
@@ -1096,6 +1096,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔺模型"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1129,12 +1137,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def epsilon_greedy_policy(model, state, epsilon=0):  # epsilon设定贪婪度，越高则越选择Q值高的动作\n",
+    "def epsilon_greedy_policy(model, state, epsilon=0): # epsilon设定贪婪度，越高则越选择Q值高的动作\n",
     "    if np.random.rand() < epsilon:\n",
-    "        return np.random.randint(n_outputs)  # 在1-epsilon概率下随机选择动作\n",
+    "        return np.random.randint(n_outputs) # 在1-epsilon概率下随机选择动作\n",
     "    else:\n",
-    "        Q_values = model.predict(state[np.newaxis], verbose=0)[0]  # 出来之后应该有两个维度，去掉一个方便后续\n",
-    "        return Q_values.argmax()  # DQN给出的Q值最高的动作索引\n"
+    "        Q_values = model.predict(state[np.newaxis], verbose=0)[0] # 出来之后应该有两个维度，去掉最外层方便后续\n",
+    "        return Q_values.argmax() # DQN给出的Q值最高的动作索引"
    ]
   },
   {
@@ -1238,7 +1246,7 @@
     "    next_Q_values = model.predict(next_states, verbose=0)  # 输出该批次每个经验中采取两个动作获得的Q值对\n",
     "    # verbose为0不输出日志，为1有进度条和日志，2为无进度条有日志\n",
     "    max_next_Q_values = next_Q_values.max(axis=1)  # 选出预测的两个动作中最大的Q值，另一个去掉\n",
-    "    runs = 1.0 - (dones | truncateds)  # 回合未结束或未出界则加上折扣分，否则不加分\n",
+    "    runs = 1.0 - (dones | truncateds) # 回合未结束或未出界则加上折扣分，否则不加分\n",
     "    target_Q_values = rewards + runs * discount_factor * max_next_Q_values\n",
     "    # 本轮获得的奖励加上折扣的下一轮最大Q值，得到本轮Q值的目标，这里reward是已知的，是采取特定动作后已经看到的结果\n",
     "    target_Q_values = target_Q_values.reshape(-1, 1)  # 把Q值展平\n",
@@ -1379,7 +1387,9 @@
    "source": [
     "## ✅如何理解DQN\n",
     "\n",
-    "先通过贪婪策略用模型让模型对初始状态随机产生一些动作（因为未经训练）并且获得结果，把这些称为经验并且存起来，经验列表长度2000，因此先运行50个回合，每一回合的步骤是几乎随机的，假如每个回合有30步，那么50回合就有1500步，就有1500个经验被加到列表中，没填满不用担心，因为抽经验是在现有长度内抽的随机数。有了经验以后就随机抽取经验训练模型（`training_step()`），每次抽的都是一个状态、行为等信息的数据组，让DQN预测下一状态（`next_states`）的Q值，用贝尔曼公式得出本轮的目标Q值` = 本轮奖励r + 折扣因子 * 下一轮的预测Q值`，再用DQN预测本轮(`states`)的Q值，通过这两个Q值的误差训练模型。"
+    "先通过贪婪策略用模型让模型对初始状态随机产生一些动作（因为未经训练）并且获得结果，把这些称为经验并且存起来，经验列表长度2000，因此先运行50个回合，每一回合的步骤是几乎随机的，假如每个回合有30步，那么50回合就有1500步，就有1500个经验被加到列表中，没填满不用担心，因为抽经验是在现有长度内抽的随机数。有了经验以后就随机抽取经验训练模型（`training_step()`），每次抽的都是一个状态、行为等信息的数据组，让DQN预测下一状态（`next_states`）的Q值，用贝尔曼公式得出本轮的目标Q值` = 本轮奖励r + 折扣因子 * 下一轮的预测Q值`，再用DQN预测本轮(`states`)的Q值，通过这两个Q值的误差训练模型。\n",
+    "\n",
+    "`所以神经网络在这里实际上参与了两个Q值的预测`，一个是直接预测当前状态的Q值，另一个是预测下一状态的Q值，并且乘以折扣，加上当前获得的奖励，这也与贝尔曼方程一致。"
    ]
   },
   {
@@ -1437,7 +1447,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "由于DQN计算Q值也用一样的模型，即被不断修改的，因此被估计的Q值可能更大，因此用一个一样的另一个模型估计Q值，仅50回合更新一次权重，而动作还是用原来的模型先估计动作Q值再确定动作，其他部分几乎完全一样"
+    "## ✅如何理解双DQN\n",
+    "\n",
+    "由于DQN计算Q值也用一样的模型，即被不断修改的，因此被估计的Q值可能更大，因此用一个初始权重一致的克隆模型估计Q值，称之为目标模型，仅50回合更新一次权重，该权重就是原模型已经更新若干次的权重，而动作还是用原来的模型先估计动作Q值再确定动作，其他部分几乎完全一样"
    ]
   },
   {
@@ -1453,7 +1465,7 @@
     "\n",
     "\n",
     "def training_step(batch_size):\n",
-    "    experiences = sample_experiences(batch_size)\n",
+    "    experiences = sample_experiences(batch_size) # 提取经验\n",
     "    states, actions, rewards, next_states, dones, truncateds = experiences\n",
     "\n",
     "    #################### 修改部分 ####################\n",
@@ -1462,9 +1474,8 @@
     "    )  # ≠ target.predict()\n",
     "    best_next_actions = next_Q_values.argmax(axis=1)  # 直接取动作而非Q值\n",
     "    next_mask = tf.one_hot(best_next_actions, n_outputs).numpy()\n",
-    "    max_next_Q_values = (target.predict(next_states, verbose=0) * next_mask).sum(\n",
-    "        axis=1\n",
-    "    )  # 计算Q值使用目标模型\n",
+    "    max_next_Q_values = (target.predict(next_states, verbose=0) * next_mask).sum(axis=1) \n",
+    "    # 计算Q值使用目标模型\n",
     "    #################################################\n",
     "\n",
     "    runs = 1.0 - (dones | truncateds)\n",
@@ -1508,9 +1519,9 @@
     "    rewards.append(step)  # 记录本回合最终分数\n",
     "    if step >= best_score:  # 最终步骤数实际上等于奖励分数\n",
     "        best_weights = model_double_dqn.get_weights()  # 获得本回合的权重\n",
-    "        best_score = step  # 保留该回合最高分\n",
+    "        best_score = step  # 保留该回合最高分,前面已经提到回合数等于分值\n",
     "\n",
-    "    if episode > 50:  # 50个回合之后再训练，目的是先增加经验，但是具体加了多少不确定，因为每回合步骤几乎是随机的\n",
+    "    if episode > 50:  # 50个回合之后再训练，目的是先增加经验，但是具体加了多少不确定，因为每回合步骤是随机的\n",
     "        training_step(batch_size)\n",
     "        if episode % 50 == 0:  ##### 50回合修改一次目标模型的权重 #####\n",
     "            target.set_weights(model_double_dqn.get_weights())\n",
@@ -1654,9 +1665,10 @@
     "input_states = tf.keras.layers.Input(shape=[4])\n",
     "hidden1 = tf.keras.layers.Dense(32, activation=\"elu\")(input_states)\n",
     "hidden2 = tf.keras.layers.Dense(32, activation=\"elu\")(hidden1)\n",
-    "state_values = tf.keras.layers.Dense(1)(hidden2)\n",
-    "raw_advantages = tf.keras.layers.Dense(n_outputs)(hidden2)\n",
-    "advantages = raw_advantages - tf.reduce_max(raw_advantages, axis=1, keepdims=True)\n",
+    "state_values = tf.keras.layers.Dense(1)(hidden2) # V，状态价值\n",
+    "raw_advantages = tf.keras.layers.Dense(n_outputs)(hidden2) # 原始A\n",
+    "advantages = raw_advantages - tf.reduce_max(raw_advantages, axis=1, keepdims=True) \n",
+    "# A，相对于之前最好的动作的动作优势\n",
     "Q_values = state_values + advantages\n",
     "model_ddqn = tf.keras.Model(inputs=[input_states], outputs=[Q_values])"
    ]
@@ -1668,7 +1680,7 @@
    "source": [
     "## ✅DDQN 思路\n",
     "\n",
-    "有两个隐藏层，但在第三层给出两个输出，一个输出`V(s)`一个输出`A(s,a)`，最终输出`V(s)+A(s,a)`，V代表当前状态的价值，A是当前状态s采取动作a获得的优势，假设最佳策略会采取最佳动作，因此要让`V=Q(s,a*)`，a\\*代表最佳动作，也就相当于`A(s,a\\*)`等于0，在神经网络中增加对A的约束，让原来的A减去所有A中最大的值"
+    "有两个隐藏层，但在第三层给出两个输出，一个输出`V(s)`一个输出`A(s,a)`，最终输出`V(s)+A(s,a)`，V代表当前状态的价值，A是当前状态s采取动作a获得的优势，假设最佳策略会采取最佳动作，因此要让`V=Q(s,a*)`，`a*`代表最佳动作，也就相当于`A(s,a*)`等于0，在神经网络中增加对A的约束，让原来的A减去所有A中最大的值，模型输出的估计的状态价值与贝尔曼方程推导的状态价值应当一致并且以此训练。"
    ]
   },
   {
