--- a/机器学习笔记/X_02_草稿.ipynb
+++ b/机器学习笔记/X_02_草稿.ipynb
@@ -2,24 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gym"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"BipedalWalker-v3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'NVIDIA GeForce RTX 3060 Laptop GPU'"
+       "(array([ 2.7466950e-03,  5.4440316e-06, -7.0987211e-04, -1.6000036e-02,\n",
+       "         9.2325777e-02,  1.6479245e-03,  8.5996759e-01,  9.2805050e-05,\n",
+       "         1.0000000e+00,  3.2685842e-02,  1.6478632e-03,  8.5361665e-01,\n",
+       "        -1.1212792e-03,  1.0000000e+00,  4.4081357e-01,  4.4581968e-01,\n",
+       "         4.6142232e-01,  4.8954970e-01,  5.3410226e-01,  6.0246044e-01,\n",
+       "         7.0914817e-01,  8.8593090e-01,  1.0000000e+00,  1.0000000e+00],\n",
+       "       dtype=float32),\n",
+       " {})"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "torch.cuda.is_available()\n",
-    "torch.cuda.get_device_name(0)"
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Box(-1.0, 1.0, (4,), float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space"
    ]
   },
   {
