--- a/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
+++ b/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
@@ -315,6 +315,7 @@
     "    for epoch in range(n_epochs):\n",
     "        print(\"Epoch {}/{}\".format(epoch + 1, n_epochs)) # not shown in the book\n",
     "        for X_batch in dataset:\n",
+    "            \n",
     "            # phase 1 - training the discriminator\n",
     "            noise = tf.random.normal(shape=[batch_size, codings_size]) # 生成随机噪声数据矩阵\n",
     "            generated_images = generator(noise) # 利用生成器生成噪声图\n",
@@ -322,13 +323,14 @@
     "            y1 = tf.constant([[0.]] * batch_size + [[1.]] * batch_size) # 噪声标记为0，真图1\n",
     "            discriminator.trainable = True # 前面在编译时候设定为不可训练，这里改成可训练以避免警告\n",
     "            discriminator.train_on_batch(X_fake_and_real, y1) # fit也可以（？）\n",
+    "            \n",
     "            # phase 2 - training the generator\n",
     "            noise = tf.random.normal(shape=[batch_size, codings_size])\n",
     "            y2 = tf.constant([[1.]] * batch_size) # 我们希望让判别器认为生成器生成的图像都是真实图像\n",
     "            discriminator.trainable = False \n",
     "            # 训练GAN时判别器不可训练，但前面设为True，这里设定False避免报错\n",
     "            gan.train_on_batch(noise, y2)\n",
-    "        plot_multiple_images(generated_images, 8) # 需要看图像就加上此命令\n",
+    "        plot_multiple_images(generated_images, 8) # 此函数看图像\n",
     "        plt.show()"
    ]
   },
