--- a/机器学习笔记/18_强化学习.ipynb
+++ b/机器学习笔记/18_强化学习.ipynb
@@ -1756,7 +1756,6 @@
     "optimizer = keras.optimizers.Adam(learning_rate=7.5e-3)\n",
     "loss_fn = keras.losses.Huber()\n",
     "\n",
-    "\n",
     "def training_step(batch_size):\n",
     "    experiences = sample_experiences(batch_size)\n",
     "    states, actions, rewards, next_states, dones, truncateds = experiences\n",
@@ -1766,7 +1765,7 @@
     "    next_best_Q_values = (target.predict(next_states, verbose=0) * next_mask).sum(\n",
     "        axis=1\n",
     "    )\n",
-    "    target_Q_values = rewards + (1 - dones) * discount_rate * next_best_Q_values\n",
+    "    target_Q_values = rewards + (1 - dones | truncateds) * discount_rate * next_best_Q_values\n",
     "    target_Q_values = target_Q_values.reshape(-1, 1)\n",
     "    mask = tf.one_hot(actions, n_outputs)\n",
     "    with tf.GradientTape() as tape:\n",
