--- a/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
+++ b/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
@@ -313,7 +313,7 @@
     "def train_gan(gan, dataset, batch_size, codings_size, n_epochs=50):\n",
     "    generator, discriminator = gan.layers\n",
     "    for epoch in range(n_epochs):\n",
-    "        print(\"Epoch {}/{}\".format(epoch + 1, n_epochs)) # not shown in the book\n",
+    "        print(\"Epoch {}/{}\".format(epoch + 1, n_epochs))\n",
     "        for X_batch in dataset:\n",
     "            \n",
     "            # phase 1 - training the discriminator\n",
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "怎么理解GAN设定y都是1（预测真）？ 因为生成器先生成图像，判别器认为是伪，而真实值是1，那么进行反向传播时，先流到判别器，然而判别器不可训练，因此再流到生成器改变其权重，使生成器的权重越来越靠近生成真实图的状态，如果它成功欺骗了判别器，那么误差越来越小，这就是GAN基本思想。\n",
+    "怎么理解生成器设定y都是1（预测真）？因为生成器首先生成图像，第一次输出肯定是比较糟糕的，判别器就认为是伪，输出0，而真实值是1，进行反向传播时，这个误差先流到判别器，然而判别器不可训练，因此再流到生成器改变权重，使生成器的权重越来越靠近生成真实图的状态，要使误差变小，生成器就应该调整权重让图像更真实，从而骗过判别器，这就是GAN的基本思想。\n",
     "\n",
     "判别器越好，生成器的进步空间就越大"
    ]
