--- a/机器学习笔记/X_01_手搓BP神经网络.ipynb
+++ b/机器学习笔记/X_01_手搓BP神经网络.ipynb
@@ -602,10 +602,14 @@
     "        return self.b1 - lr * delta_b1\n",
     "    \n",
     "    def fit(self, x, y, activator):\n",
-    "        self.w1 = np.random.randn(20, 1) # 本层神经元数量, 一次输入一个，可以用batch一次多个**\n",
-    "        self.b1 = np.random.randn(5, 1) # 本层神经元数量, 一维神经网络就一层**\n",
-    "        self.w2 = np.random.randn(1, self.w1.shape[0]) # 本层神经元数量，上一层神经元数量**\n",
-    "        self.b2 = np.random.randn(1, 1) # 本层神经元数量, 一维神经网络就一层**\n",
+    "        self.w1 = np.random.randn(20, 1) \n",
+    "        # 👆大小规则：本层神经元数量, 一次输入一个，可以用batch一次多个**\n",
+    "        self.b1 = np.random.randn(5, 1) \n",
+    "        # 👆大小规则：本层神经元数量, 一维神经网络就一层**\n",
+    "        self.w2 = np.random.randn(1, self.w1.shape[0]) \n",
+    "        # 👆大小规则：本层神经元数量，上一层神经元数量**\n",
+    "        self.b2 = np.random.randn(1, 1) \n",
+    "        # 👆大小规则：本层神经元数量, 一维神经网络就一层**\n",
     "        self.y = y\n",
     "        self.x = x\n",
     "        self.mse = 0\n",
@@ -627,16 +631,18 @@
     "            self.list_mse.append(self.mse)\n",
     "                \n",
     "            if self.mse <= target_error:\n",
-    "                print('✅ 共{:d}轮, 达到目标损失, 最终损失E={:.5f}'.format(_+1, self.mse))\n",
+    "                print('✅ 共{:d}轮, 达到目标损失, \\\n",
+    "                    最终损失E={:.5f}'.format(_+1, self.mse))\n",
     "                break\n",
     "            \n",
     "            if _ > 15 and np.mean(self.list_mse[-20: -1]) < self.list_mse[-1]:\n",
-    "                print('✅ 共{:d}轮, 损失反向增大，自动停止, 最终损失E={:.5f}'.format(_+1, self.mse))\n",
+    "                print('✅ 共{:d}轮, 损失反向增大，自动停止, \\\n",
+    "                      最终损失E={:.5f}'.format(_+1, self.mse))\n",
     "                break\n",
     "            \n",
     "            elif _ == epochs - 1 and self.mse > target_error:\n",
-    "                print('❌ 共{:d}轮, 最终损失E={:.5f}, 未达到目标损失 {:.5f}'.format(_+1, \n",
-    "                                                                      self.mse, target_error))\n",
+    "                print('❌ 共{:d}轮, 最终损失E={:.5f}, \\\n",
+    "                    未达到目标损失 {:.5f}'.format(_+1,self.mse, target_error))\n",
     "                break\n",
     "            \n",
     "    def fit_transform(self, x, y, epochs:int, lr=0.01, activator='sigmoid', \n",
