修改增加部分文件
Former-commit-id: 906bb3b218a6ac3bc2e656a5f824baeff0f35b31

--- a/机器学习笔记/18_强化学习.ipynb
+++ b/机器学习笔记/18_强化学习.ipynb
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
        " LogicalDevice(name='/device:GPU:0', device_type='GPU')]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
     "rewards = []\n",
     "best_score = 0\n",
     "\n",
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "discount_factor = 0.95\n",
     "optimizer = tf.keras.optimizers.Nadam(learning_rate=1e-2)  # 优化器\n",
     "loss_fn = tf.keras.losses.mean_squared_error  # 损失函数mse"
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -1268,19 +1268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode: 600, Steps: 126, ε: 0.010"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for episode in range(600):  # 600回合\n",
+    "for episode in range(1000):  # 若干回合\n",
     "    obs, info = env.reset()\n",
     "    for step in range(200):  # 执行最多200步\n",
     "        epsilon = max(1 - episode / 500, 0.01)  # 功率调节，最小是0.01，线性降低\n",
@@ -1515,7 +1507,7 @@
    "source": [
     "for episode in range(500):  # 600回合\n",
     "    obs, info = env.reset()\n",
-    "    for step in range(200):  # 执行最多200步\n",
+    "    for step in range(200):  # 执行最多n步\n",
     "        epsilon = max(1 - episode / 500, 0.01)  # 功率调节，最小是0.01，线性降低\n",
     "        obs, reward, done, truncated, info = play_one_step(\n",
     "            model_double_dqn, env, obs, epsilon\n",
