--- a/机器学习笔记/18_强化学习.ipynb
+++ b/机器学习笔记/18_强化学习.ipynb
@@ -1088,7 +1088,7 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "import numpy as np\n",
-    "import gym\n",
+    "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = [\"Microsoft YaHei\"]\n",
@@ -1100,7 +1100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔺模型"
+    "## 🔺神经网络模型"
    ]
   },
   {
@@ -1261,7 +1261,7 @@
     "        # 把预测的Q值和掩码相乘，去掉不需要的Q值，在轴1上求和，得到一个Q值张量\n",
     "        # 为什么目标Q值不需要？因为那是已知的一个动作对应的一个Q值（一组），而预测Q值有两个可能的动作对应的Q值\n",
     "        loss = tf.reduce_mean(loss_fn(target_Q_values, Q_values))  # 平均的均方误差\n",
-    "    # 【还有，为什么tape在with外面用？？？】\n",
+    "    # 【还有，为什么tape在with外面用？】 应该是因为梯度计算后需要清零，这里是tape\n",
     "    grads = tape.gradient(loss, model.trainable_variables)  # 计算梯度\n",
     "    optimizer.apply_gradients(zip(grads, model.trainable_variables))  # 梯度下降"
    ]
