--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -134,43 +134,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 初始化"
+    "# 初始化超参数"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x170cff8b0f0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lr = 2e-3\n",
-    "total_epoch = 50  # 迭代数\n",
+    "# 环境相关\n",
+    "env_name = 'CartPole-v1'\n",
+    "env = gym.make(env_name, render_mode='rgb_array')\n",
+    "\n",
+    "# DQN相关\n",
+    "total_epoch = 2  # 迭代数\n",
+    "s_epoch = 0 # 默认开始位置\n",
     "total_episode = 70  # 每次迭代最大游戏轮数\n",
     "max_step = 500\n",
-    "hidden_dim_1 = 32\n",
-    "hidden_dim_2 = 32\n",
     "gamma = 0.98\n",
     "epsilon = 1  # 刚开始随机动作,更新中线性降低\n",
-    "target_update = 20  # 10回合更新一次目标网络\n",
+    "target_update = 20  # 若干回合更新一次目标网络\n",
     "buffer_size = 10000  # 经验大小\n",
     "minimal_size = 1000  # 最小经验数\n",
     "batch_size = 128\n",
     "best_score = 0  # 每回合中的最佳分数\n",
-    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "\n",
-    "env_name = 'CartPole-v1'\n",
-    "env = gym.make(env_name, render_mode='rgb_array')\n",
-    "\n",
-    "random.seed(0)\n",
-    "np.random.seed(0)\n",
-    "torch.manual_seed(0)\n",
     "replay_buffer = ReplayBuffer(buffer_size)\n",
+    "reward_list = []\n",
+    "best_weight = 0\n",
+    "\n",
+    "# 神经网络相关\n",
+    "lr = 2e-3\n",
+    "hidden_dim_1 = 32\n",
+    "hidden_dim_2 = 32\n",
     "state_dim = env.observation_space.shape[0]  # 状态空间大小\n",
     "action_dim = env.action_space.n  # 动作空间大小\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "agent = DQN(state_dim, hidden_dim_1, hidden_dim_2, action_dim, lr, gamma, epsilon,\n",
     "            target_update, device)\n",
     "\n",
-    "return_list = []"
+    "# 随机数种子\n",
+    "random.seed(0)\n",
+    "np.random.seed(0)\n",
+    "torch.manual_seed(0)"
    ]
   },
   {
@@ -186,12 +203,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists('checkpoint/ckpt_dqn.pt'):\n",
-    "    checkpoint = torch.load('checkpoint/ckpt_dqn.pt')\n",
+    "if os.path.exists('checkpoints/ckpt_dqn.pt'):\n",
+    "    checkpoint = torch.load('checkpoints/ckpt_dqn.pt')\n",
     "    s_epoch = checkpoint['epoch']\n",
     "    epsilon = checkpoint['epsilon']\n",
     "    agent.q_net.load_state_dict(checkpoint['best_weight'])\n",
-    "    return_list = checkpoint['return_list']\n",
+    "    reward_list = checkpoint['reward_list']\n",
     "else:\n",
     "    s_epoch = 0"
    ]
@@ -205,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                                            \r"
+      "                                                                                                  \r"
      ]
     },
     {
@@ -221,14 +238,14 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for epoch in range(s_epoch, total_epoch):\n",
-    "    with tqdm.tqdm(total=total_episode, desc='<%d/%d>' % (epoch, total_epoch), leave=False) as pbar:\n",
+    "    with tqdm.tqdm(total=total_episode, desc='<%d/%d>'%(epoch+1, total_epoch), leave=False) as pbar:\n",
     "        for episode in range(total_episode):\n",
     "            episode_return = 0\n",
     "            state = env.reset()[0]\n",
@@ -259,20 +276,20 @@
     "                        best_weight = agent.q_net.state_dict()\n",
     "                        best_score = step\n",
     "                    \n",
-    "            return_list.append(episode_return)\n",
+    "            reward_list.append(episode_return)\n",
     "            \n",
     "            if (episode + 1) % 10 == 0:  # 显示过去10次游戏情况\n",
     "                pbar.set_postfix({\n",
-    "                    'total_games':\n",
+    "                    'train_times':\n",
     "                    '%d' % (total_episode * epoch + episode + 1),  # 至今一共训练了多少次游戏\n",
-    "                    'last_returns':\n",
-    "                    '%.1f' % np.mean(return_list[-10:]),\n",
+    "                    'recent_reward':\n",
+    "                    '%.1f' % np.mean(reward_list[-10:]),\n",
     "                    'episilon':\n",
     "                    '%.2f' % agent.epsilon\n",
     "                })\n",
     "                \n",
     "            # 调整epsilon\n",
-    "            agent.epsilon = max(1 - epoch / (total_epoch / 3), 0.01)\n",
+    "            agent.epsilon = max(1 - epoch / (total_epoch / 2), 0.01)\n",
     "            \n",
     "            # 保存检查点\n",
     "            torch.save({\n",
@@ -280,8 +297,8 @@
     "                'episode': episode,\n",
     "                'best_weight': best_weight,\n",
     "                'epsilon': epsilon,\n",
-    "                'return_list': return_list,\n",
-    "                }, 'checkpoint/ckpt_dqn.pt')\n",
+    "                'reward_list': reward_list,\n",
+    "                }, 'checkpoints/ckpt_dqn.pt')\n",
     "            \n",
     "            pbar.update(1)  # 更新进度条\n",
     "agent.q_net.load_state_dict(best_weight)  # 应用最佳权重"
@@ -289,7 +306,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,24 +351,22 @@
     }
    ],
    "source": [
-    "episodes_list = list(range(len(return_list)))\n",
-    "plt.plot(episodes_list, return_list)\n",
+    "episodes_list = list(range(len(reward_list)))\n",
+    "plt.plot(episodes_list, reward_list, label='return')\n",
+    "plt.title('DQN on {}'.format(env_name))\n",
+    "\n",
+    "mv_return = rl_utils.moving_average(reward_list, 9)\n",
+    "plt.plot(episodes_list, mv_return, label='return of moving_average_9')\n",
     "plt.xlabel('Episodes')\n",
     "plt.ylabel('Returns')\n",
     "plt.title('DQN on {}'.format(env_name))\n",
-    "plt.show()\n",
-    "\n",
-    "mv_return = rl_utils.moving_average(return_list, 9)\n",
-    "plt.plot(episodes_list, mv_return)\n",
-    "plt.xlabel('Episodes')\n",
-    "plt.ylabel('Returns')\n",
-    "plt.title('DQN on {} in moving_average'.format(env_name))\n",
-    "plt.show()"
+    "plt.legend()\n",
+    "plt.savefig('pictures/DQN.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -347,13 +382,13 @@
    ],
    "source": [
     "net = Qnet().to('cuda')\n",
-    "checkpoint = torch.load('checkpoint/ckpt.pt')\n",
+    "checkpoint = torch.load('checkpoints/ckpt.pt')\n",
     "net.load_state_dict(checkpoint['best_weight'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -368,16 +403,7 @@
     }
    ],
    "source": [
-    "rl_utils.show_gym_policy(env_name, net, epochs=5, steps=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.close()"
+    "print('测试结果: ', rl_utils.show_gym_policy(env_name, agent.q_net, 'human', epochs=5, steps=500))"
    ]
   },
   {
@@ -385,7 +411,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env.close()"
+   ]
   }
  ],
  "metadata": {
